@@ -6,3 +6,5 @@ TODO.md
 appveyor.yml
 .travis.yml
 README.Rmd
+docs
+mkdocs
